<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/login1"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ui.createstudent.CreateActivity">

    <ImageView
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:background="@drawable/book"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jpr"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="10sp"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text"
        android:textSize="16sp"
        android:drawableStart="@drawable/person"
        android:layout_marginTop="10sp"
        android:drawablePadding="10sp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        android:drawableStart="@drawable/email"
        android:layout_marginTop="10sp"
        android:drawablePadding="10sp"/>


    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:inputType="number"
        android:textSize="16sp"
        android:drawableStart="@drawable/phone"
        android:layout_marginTop="10dp"
        android:drawablePadding="10sp"/>

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:inputType="text"
        android:textSize="16sp"
        android:drawableStart="@drawable/home"
        android:layout_marginTop="10sp"
        android:drawablePadding="10sp"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/submit"/>


</LinearLayout>