<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity=""
    android:background="@drawable/page1"
    android:orientation="vertical"
    tools:context=".ui.home.HomeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:textSize="36sp"
        android:text="@string/welcome_to_jpr"
        android:background="#2196F3"
        android:gravity="center"
        android:textColor="@color/white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:orientation="horizontal">

    <Button
        android:id="@+id/createBtn"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:text="@string/add_user"
        android:layout_marginEnd="60sp"
        android:textSize="26sp"/>
    <Button
        android:id="@+id/allBtn"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:text="@string/all_userlist"
        android:textSize="26sp"/>
</LinearLayout>

</LinearLayout>