<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/userIv"
                android:layout_width="80dp"
                android:layout_height="80dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp">

                <TextView
                    android:id="@+id/userNameTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ritik_kumar"
                    android:textSize="20sp"
                    android:textColor="#F44336"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/userphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_8826257784"
                    android:textSize="20sp"
                    android:textColor="#F44336"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/useremail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ritik_321"
                    android:textColor="#F44336"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/useraddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yamuna_nager"
                    android:textColor="#F44336"
                    android:textSize="20dp"
                    android:textStyle="bold"/>


            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>